--- a/SKDesktopDuplicator.csproj
+++ b/SKDesktopDuplicator.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StereoKit" Version="0.3.6-preview.7" />
+    <PackageReference Include="StereoKit" Version="0.3.6" />
     <PackageReference Include="Vortice.Direct3D11" Version="2.1.2" />
     <PackageReference Include="Vortice.DXGI" Version="2.1.2" />
   </ItemGroup>
